Trabalho LFA/QuestionarioParser.java
// Generated from Questionario.g4 by ANTLR 4.8

import javaTypes.*;
import java.util.Map;
import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuestionarioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		BOOLEAN=74, STRING=75, ID=76, INTEGER=77, DOUBLE=78, WS=79, LINE_COMMENT=80, 
		COMMENT=81, ERROR=82;
	public static final int
		RULE_program = 0, RULE_quiz = 1, RULE_options = 2, RULE_sections = 3, 
		RULE_file = 4, RULE_theme = 5, RULE_simpleQuestion = 6, RULE_questions = 7, 
		RULE_load = 8, RULE_qst = 9, RULE_main = 10, RULE_stat = 11, RULE_line = 12, 
		RULE_idList = 13, RULE_declaration = 14, RULE_quizDeclaration = 15, RULE_quizAssignment = 16, 
		RULE_assignment = 17, RULE_type = 18, RULE_expr = 19, RULE_var = 20, RULE_quizExpr = 21, 
		RULE_questionID = 22, RULE_sectionID = 23, RULE_quizID = 24, RULE_iteration = 25, 
		RULE_quizIteration = 26, RULE_sectionIteration = 27, RULE_showQuestion = 28, 
		RULE_answer = 29, RULE_print = 30, RULE_read = 31, RULE_enableOptions = 32, 
		RULE_ifCondition = 33, RULE_simpleIfCondition = 34, RULE_elseIfCondition = 35, 
		RULE_elseCondition = 36, RULE_whileCondition = 37, RULE_forCondition = 38, 
		RULE_timeEndTime = 39, RULE_condition = 40, RULE_comparation = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "quiz", "options", "sections", "file", "theme", "simpleQuestion", 
			"questions", "load", "qst", "main", "stat", "line", "idList", "declaration", 
			"quizDeclaration", "quizAssignment", "assignment", "type", "expr", "var", 
			"quizExpr", "questionID", "sectionID", "quizID", "iteration", "quizIteration", 
			"sectionIteration", "showQuestion", "answer", "print", "read", "enableOptions", 
			"ifCondition", "simpleIfCondition", "elseIfCondition", "elseCondition", 
			"whileCondition", "forCondition", "timeEndTime", "condition", "comparation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Quiz'", "'('", "','", "')'", "'{'", "'}'", "'Options'", "':'", 
			"';'", "'Section'", "'<'", "'%'", "'>'", "'from'", "'->'", "'=>'", "'all'", 
			"'random'", "'difficulty['", "']'", "'['", "'\\'", "'load'", "'as'", 
			"'''", "'.qst''", "'main'", "'='", "'++'", "'--'", "'Timer'", "'int'", 
			"'double'", "'boolean'", "'String'", "'+'", "'-'", "'*'", "'/'", "'sizeof'", 
			"'result'", "'.current'", "'.prev'", "'.next'", "'.start'", "'.end'", 
			"'.'", "'next'", "'prev'", "'start'", "'end'", "'goto'", "'show'", "'answer'", 
			"'case'", "'valid'", "'invalid'", "'print'", "'read'", "'enable'", "'if'", 
			"'else if'", "'else'", "'while'", "'for'", "'time'", "'endTime'", "'||'", 
			"'&&'", "'=='", "'!='", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BOOLEAN", "STRING", "ID", "INTEGER", "DOUBLE", "WS", "LINE_COMMENT", 
			"COMMENT", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Questionario.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	static protected Map<String,Symbol> symbolTable = new HashMap<>();

	public QuestionarioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public QuizContext quiz() {
			return getRuleContext(QuizContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(QuestionarioParser.EOF, 0); }
		public List<LoadContext> load() {
			return getRuleContexts(LoadContext.class);
		}
		public LoadContext load(int i) {
			return getRuleContext(LoadContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				load();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__22 );
			setState(89);
			quiz();
			setState(90);
			main();
			setState(91);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuizContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(QuestionarioParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QuestionarioParser.ID, i);
		}
		public OptionsContext options() {
			return getRuleContext(OptionsContext.class,0);
		}
		public List<SectionsContext> sections() {
			return getRuleContexts(SectionsContext.class);
		}
		public SectionsContext sections(int i) {
			return getRuleContext(SectionsContext.class,i);
		}
		public QuizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quiz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterQuiz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitQuiz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitQuiz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuizContext quiz() throws RecognitionException {
		QuizContext _localctx = new QuizContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_quiz);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__0);
			setState(94);
			match(ID);
			setState(95);
			match(T__1);
			setState(96);
			match(ID);
			setState(97);
			match(T__2);
			setState(98);
			match(ID);
			setState(99);
			match(T__3);
			setState(100);
			match(T__4);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(101);
				options();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(104);
					sections();
					}
					}
					setState(107); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__9 );
				}
			}

			setState(111);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(QuestionarioParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QuestionarioParser.ID, i);
		}
		public List<TerminalNode> STRING() { return getTokens(QuestionarioParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(QuestionarioParser.STRING, i);
		}
		public OptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_options; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitOptions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionsContext options() throws RecognitionException {
		OptionsContext _localctx = new OptionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_options);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__6);
			setState(114);
			match(ID);
			setState(115);
			match(T__1);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(116);
				match(ID);
				setState(117);
				match(T__7);
				setState(118);
				match(STRING);
				setState(119);
				match(T__8);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(T__3);
			setState(126);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QuestionarioParser.ID, 0); }
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode INTEGER() { return getToken(QuestionarioParser.INTEGER, 0); }
		public SectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterSections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitSections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitSections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionsContext sections() throws RecognitionException {
		SectionsContext _localctx = new SectionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sections);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__9);
			setState(129);
			match(ID);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(130);
				match(T__10);
				setState(131);
				match(INTEGER);
				setState(132);
				match(T__11);
				setState(133);
				match(T__12);
				}
			}

			setState(136);
			match(T__1);
			setState(137);
			file();
			setState(138);
			match(T__3);
			setState(139);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public Token ref;
		public TerminalNode ID() { return getToken(QuestionarioParser.ID, 0); }
		public List<SimpleQuestionContext> simpleQuestion() {
			return getRuleContexts(SimpleQuestionContext.class);
		}
		public SimpleQuestionContext simpleQuestion(int i) {
			return getRuleContext(SimpleQuestionContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__13);
			setState(142);
			((FileContext)_localctx).ref = match(ID);
			setState(143);
			match(T__7);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(144);
				simpleQuestion();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(145);
					match(T__2);
					setState(146);
					simpleQuestion();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(154);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThemeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(QuestionarioParser.STRING, 0); }
		public List<TerminalNode> INTEGER() { return getTokens(QuestionarioParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(QuestionarioParser.INTEGER, i);
		}
		public List<ThemeContext> theme() {
			return getRuleContexts(ThemeContext.class);
		}
		public ThemeContext theme(int i) {
			return getRuleContext(ThemeContext.class,i);
		}
		public List<QuestionsContext> questions() {
			return getRuleContexts(QuestionsContext.class);
		}
		public QuestionsContext questions(int i) {
			return getRuleContext(QuestionsContext.class,i);
		}
		public ThemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_theme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterTheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitTheme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitTheme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThemeContext theme() throws RecognitionException {
		return theme(0);
	}

	private ThemeContext theme(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ThemeContext _localctx = new ThemeContext(_ctx, _parentState);
		ThemeContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_theme, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(157);
				match(STRING);
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(158);
					match(T__10);
					setState(159);
					match(INTEGER);
					setState(160);
					match(T__11);
					setState(161);
					match(T__12);
					}
					break;
				}
				}
				break;
			case T__16:
				{
				setState(164);
				match(T__16);
				setState(169);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(165);
					match(T__10);
					setState(166);
					match(INTEGER);
					setState(167);
					match(T__11);
					setState(168);
					match(T__12);
					}
					break;
				}
				setState(182);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(171);
					match(T__15);
					setState(172);
					match(T__17);
					setState(173);
					match(T__1);
					setState(174);
					match(INTEGER);
					setState(175);
					match(T__2);
					setState(176);
					match(T__18);
					setState(177);
					match(INTEGER);
					setState(178);
					match(T__7);
					setState(179);
					match(INTEGER);
					setState(180);
					match(T__19);
					setState(181);
					match(T__3);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(202);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(200);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new ThemeContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_theme);
						setState(186);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(187);
						match(T__14);
						setState(188);
						theme(5);
						}
						break;
					case 2:
						{
						_localctx = new ThemeContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_theme);
						setState(189);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(190);
						match(T__15);
						setState(191);
						questions();
						setState(198);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
						case 1:
							{
							setState(192);
							match(T__2);
							setState(193);
							match(T__14);
							setState(194);
							theme(0);
							}
							break;
						case 2:
							{
							setState(195);
							match(T__2);
							setState(196);
							match(T__15);
							setState(197);
							questions();
							}
							break;
						}
						}
						break;
					}
					} 
				}
				setState(204);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SimpleQuestionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QuestionarioParser.ID, 0); }
		public List<TerminalNode> INTEGER() { return getTokens(QuestionarioParser.INTEGER); }
		public TerminalNode INTEGER(int i) {
			return getToken(QuestionarioParser.INTEGER, i);
		}
		public SimpleQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterSimpleQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitSimpleQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitSimpleQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleQuestionContext simpleQuestion() throws RecognitionException {
		SimpleQuestionContext _localctx = new SimpleQuestionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleQuestion);
		try {
			int _alt;
			setState(218);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(205);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(206);
				match(ID);
				setState(207);
				match(T__7);
				setState(208);
				match(T__20);
				setState(209);
				match(INTEGER);
				setState(214);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(210);
						match(T__2);
						setState(211);
						match(INTEGER);
						}
						} 
					}
					setState(216);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				setState(217);
				match(T__19);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuestionsContext extends ParserRuleContext {
		public SimpleQuestionContext simpleQuestion() {
			return getRuleContext(SimpleQuestionContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(QuestionarioParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QuestionarioParser.ID, i);
		}
		public TerminalNode INTEGER() { return getToken(QuestionarioParser.INTEGER, 0); }
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).enterQuestions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionarioListener ) ((QuestionarioListener)listener).exitQuestions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionarioVisitor ) return ((QuestionarioVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}
